--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.5.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
+        "axios": "^1.7.2",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
@@ -19,5 +19,9 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "vue-router": "^4.4.0",
+        "vue-sweetalert2": "^5.0.11"
     }
 }
